fixed card overlap on mobile

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -27,5 +27,6 @@ body {
 
     .card-multiple {
         margin-top: 10px;
+        min-width: 100%;
     }
 }
